[gd_scene load_steps=3 format=3 uid="uid://b8bdb263t6xgy"]

[ext_resource type="Script" path="res://scripts/main_window.gd" id="1_iknov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxmrp"]
size = Vector2(64, 64)

[node name="MainWindow" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iknov")

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="Collision" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource("RectangleShape2D_vxmrp")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="StateSwitchTimer" type="Timer" parent="."]
one_shot = true

[node name="ActionsMenu" type="PopupMenu" parent="."]
size = Vector2i(100, 116)
item_count = 1
item_0/text = "←"
item_0/id = 0

[node name="OptionsMenu" type="PopupMenu" parent="."]
size = Vector2i(149, 378)
item_count = 12
item_0/text = "←"
item_0/id = 0
item_1/text = "Follow me"
item_1/id = 1
item_2/text = "Stop"
item_2/id = 2
item_3/text = "Don't do that"
item_3/id = 3
item_4/text = "Once more"
item_4/id = 4
item_5/text = "Do just that"
item_5/id = 5
item_6/text = ""
item_6/id = 200
item_6/separator = true
item_7/text = "Add mate"
item_7/id = 201
item_8/text = "Remove mate"
item_8/id = 202
item_8/disabled = true
item_9/text = ""
item_9/id = 100
item_9/separator = true
item_10/text = "Options"
item_10/id = 101
item_11/text = "Quit"
item_11/id = 102

[connection signal="animation_finished" from="Sprite" to="." method="nextAnimation"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="onSpriteInputEvent"]
[connection signal="timeout" from="StateSwitchTimer" to="." method="nextAnimation"]
[connection signal="index_pressed" from="ActionsMenu" to="." method="onActionChosen"]
[connection signal="popup_hide" from="ActionsMenu" to="." method="onUnfreeze"]
[connection signal="id_pressed" from="OptionsMenu" to="." method="onOptionChosen"]
[connection signal="popup_hide" from="OptionsMenu" to="." method="onUnfreeze"]
